--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Raleway', sans-serif !important; }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
