rooms added. Not much done since they give no points

--- a/src/app/components/rooms/room-item/room-item.component.html
+++ b/src/app/components/rooms/room-item/room-item.component.html
@@ -1,1 +1,8 @@
-<p>room-item works!</p>
+<div class="roomItem">
+    <mat-card class="card">
+        <mat-card-title-group>
+            <mat-card-title class="card-title">Numer pokoju: {{ room.roomNumber }}</mat-card-title>
+            <mat-card-subtitle class="content">Ilość miejsc: {{ room.capacity }}</mat-card-subtitle>
+        </mat-card-title-group>
+    </mat-card>
+</div>
