--- a/src/app/components/rooms/rooms-main/rooms-main.component.html
+++ b/src/app/components/rooms/rooms-main/rooms-main.component.html
@@ -1,1 +1,3 @@
-<p>rooms-main works!</p>
+<div class="container">
+    <app-room-item *ngFor="let room of rooms" [room]="room"></app-room-item>
+</div>
