pushing so I don't fuck anything up as it's somewhat working

--- a/src/app/components/movies/movies-main/movies-main.component.css
+++ b/src/app/components/movies/movies-main/movies-main.component.css
@@ -6,4 +6,14 @@
     border: 1px solid gray;
     border-radius: 5px;
   }
+.row {
+  display: flex;
+  justify-content: space-between;
+}
+h1 {
+  font-size: 64px;
+}
 
+.spacer {
+  width: 99px;
+}
