--- a/src/app/components/screenings/screenings-main/screenings-main.component.html
+++ b/src/app/components/screenings/screenings-main/screenings-main.component.html
@@ -1,15 +1,15 @@
 <div class="container">
     <div class="row">
-        <button mat-raised-button color="primary">Dodaj Seans</button>
+        <button mat-raised-button color="primary" (click)="openAddScreening()">Dodaj Seans</button>
         <h1>Seanse</h1>
         <mat-form-field appearance="fill">
             <mat-label>Podaj Datę</mat-label>
-            <input matInput [matDatepicker]="picker" [matDatepickerFilter]="myDateFilter">
+            <input matInput [matDatepicker]="picker" [(ngModel)]="date" [matDatepickerFilter]="myDateFilter">
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
     </div>
-    <app-screenings-item *ngFor="let screening of screenings" [screening]="screening"
+    <app-screenings-item *ngFor="let screening of filterScreenings()" [screening]="screening"
         [movie]="movies[screening.movieId]" [room]="rooms[screening.roomId]">
     </app-screenings-item>
 </div>
