--- a/src/app/components/screenings/screenings-item/screenings-item.component.css
+++ b/src/app/components/screenings/screenings-item/screenings-item.component.css
@@ -36,3 +36,9 @@ mat-card-title, mat-card-subtitle {
     font-size: 24px;
     height: 48px;
 }
+
+.ifRunning {
+    margin-top: 80px !important;
+    font-size: 48px;
+    color: red;
+}
