--- a/src/app/components/movies/movie-add/movie-add.component.html
+++ b/src/app/components/movies/movie-add/movie-add.component.html
@@ -1,26 +1,26 @@
 <h1 mat-dialog-title>Dodaj Film</h1>
-<form class="form" [formGroup]="form" (ngSubmit)="Submit()">
+<form class="form" (ngSubmit)="Submit()">
   <mat-form-field appearance="outline">
     <mat-label>Nazwa</mat-label>
-    <input matInput type="text" formControlName="movieName" [formControl]="checkName" />
-    <mat-error *ngIf="checkName.invalid">{{ getNameError() }}</mat-error>
+    <input matInput type="text" [formControl]="name" />
+    <mat-error *ngIf="name.invalid">{{ getNameError() }}</mat-error>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Czas trwania</mat-label>
-    <input matInput type="number" formControlName="movieDuration" [formControl]="checkDuration" />
-    <mat-error *ngIf="checkDuration.invalid">{{ getDurationError() }}</mat-error>
+    <input matInput type="number" [formControl]="duration" />
+    <mat-error *ngIf="duration.invalid">{{ getDurationError() }}</mat-error>
     <span matSuffix>min</span>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Opis</mat-label>
-    <textarea matInput class="inputDescription" formControlName="movieDescription" [formControl]="checkDescription">
+    <textarea matInput class="inputDescription" [formControl]="description">
     </textarea>
-    <mat-error *ngIf="checkDescription.invalid">{{ getDescriptionError() }}</mat-error>
+    <mat-error *ngIf="description.invalid">{{ getDescriptionError() }}</mat-error>
   </mat-form-field>
   <mat-form-field appearance="outline">
     <mat-label>Link do plakatu</mat-label>
-    <input matInput type="url" formControlName="moviePosterUrl" [formControl]="checkUrl" />
-    <mat-error *ngIf="checkUrl.invalid">{{ getErrorUrlMessage() }}</mat-error>
+    <input matInput type="url" [formControl]="url" />
+    <mat-error *ngIf="url.invalid">{{ getErrorUrlMessage() }}</mat-error>
   </mat-form-field>
   <div mat-dialog-actions>
     <span></span>
