--- a/src/app/components/movies/movies-item/movies-item.component.css
+++ b/src/app/components/movies/movies-item/movies-item.component.css
@@ -22,3 +22,12 @@ mat-card-title {
     color: white;
 }
 
+.example-h2 {
+  margin-left: 10px;
+  margin-top: 30px;
+}
+
+.example-margin {
+  margin-left: 10px;
+  margin-top: 30px;
+}
