--- a/src/app/components/movies/movies-item/movies-item.component.html
+++ b/src/app/components/movies/movies-item/movies-item.component.html
@@ -4,6 +4,11 @@
             <mat-card-title class="card-title">{{ movie.title | titlecase }}</mat-card-title>
             <mat-card-subtitle>Czas trwania filmu: {{movie.duration }} min. </mat-card-subtitle>
             <mat-card-subtitle class="card-subtitle">{{ movie.description }}</mat-card-subtitle>
+            <mat-card-subtitle>
+                <h2 class="example-h2" style="color:white">Popularność filmu w wybranym dniu(%):</h2>
+                <mat-progress-spinner [value]="pop">
+                </mat-progress-spinner>
+            </mat-card-subtitle>
             <img mat-card-xl-image [src]=movie.image>
         </mat-card-title-group>
         <mat-card-actions>
